--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-simple-website</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eveniet sed libero cupiditate eaque?
+            Praesentium, maxime minima. Tenetur cumque cum illum laudantium ab facilis atque, qui rerum, animi, sapiente
+            incidunt.</p>
+    </div>
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eveniet sed libero cupiditate eaque?
+            Praesentium, maxime minima. Tenetur cumque cum illum laudantium ab facilis atque, qui rerum, animi, sapiente
+            incidunt.</p>
+    </div>
+    <div>
+        <h3>My First Website</h3>
+        <li>git init</li>
+        <li>git commit</li>
+        <li>git push</li>
+    </div>
 
 </body>
 
